--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -13,10 +13,26 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
-#: src/App.js:8
-msgid "Hello {a} {0}!"
-msgstr ""
+#: src/App.js:43
+msgid "Crazy Nic!!"
+msgstr "Crazy Nic!!"
 
-#: src/App.js:12
-msgid "{messagesCount, plural, one {There's # message in your inbox} other {There're # messages in your inbox}}"
-msgstr ""
+#: src/App.js:49
+msgid "Last time I had to configure webpack {0,date}"
+msgstr "Last time I had to configure webpack {0,date}"
+
+#: src/App.js:14
+msgid "This message is translated and has a <0>link</0>"
+msgstr "This message is translated and has a <0>link</0>"
+
+#: src/App.js:10
+msgid "This message will fallback to {fallbackLang} / {count}!"
+msgstr "This message will fallback to {fallbackLang} / {count}!"
+
+#: src/App.js:20
+msgid "my.custom.id"
+msgstr "Custom ID works"
+
+#: src/App.js:23
+msgid "{count, plural, =0 {There're no messages} one {There's # message in your inbox} other {There're # messages in your inbox}}"
+msgstr "{count, plural, =0 {There're no messages} one {There's # message in your inbox} other {There're # messages in your inbox}}"
