--- a/src/locales/pl/messages.po
+++ b/src/locales/pl/messages.po
@@ -13,10 +13,26 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
-#: src/App.js:8
-msgid "Hello {a} {0}!"
-msgstr "Cześć {a} {0}!"
+#: src/App.js:43
+msgid "Crazy Nic!!"
+msgstr "Szalony Nik!!"
 
-#: src/App.js:12
-msgid "{messagesCount, plural, one {There's # message in your inbox} other {There're # messages in your inbox}}"
-msgstr "{messagesCount, plural, one {W Twojej skrzynce jest # wiadomość} other {W Twojej skrzynce jest # wiadomości}}"
+#: src/App.js:49
+msgid "Last time I had to configure webpack {0,date}"
+msgstr "Cośtam cośtam, data: {0,date}"
+
+#: src/App.js:14
+msgid "This message is translated and has a <0>link</0>"
+msgstr "Ta wiadomość jest przetłumaczona i ma <0>odnośnik</0>"
+
+#: src/App.js:10
+msgid "This message will fallback to {fallbackLang} / {count}!"
+msgstr ""
+
+#: src/App.js:20
+msgid "my.custom.id"
+msgstr "Działa..."
+
+#: src/App.js:23
+msgid "{count, plural, =0 {There're no messages} one {There's # message in your inbox} other {There're # messages in your inbox}}"
+msgstr "{count, plural, =0 {Nie masz wiadomości} one {Jest tylko jedna wiadomość} few {Masz # wiadomości} many {Masz # wiadomości}}"
