--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -1,25 +1,18 @@
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2019-12-10 22:21+0100\n"
-"Mime-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: @lingui/cli\n"
+"X-Generator: lokalise.com\n"
+"Project-Id-Version: Sample Project\n"
+"PO-Revision-Date: 2019-12-30 15:34\n"
+"Last-Translator: lokalise.com\n"
+"Language-Team: lokalise.com\n\n"
 "Language: en\n"
-"Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Plural-Forms: \n"
 
 #: src/App.js:27
 msgid "13 Nice"
 msgstr "13 Nice"
-
-#: src/App.js:28
-#~ msgid "Buffer"
-#~ msgstr "Buffer"
 
 #: src/App.js:28
 msgid "Buffer zone"
@@ -73,10 +66,6 @@ msgstr "Next text"
 msgid "Okey Google"
 msgstr "Okey Google"
 
-#: src/App.js:34
-#~ msgid "This hikolp"
-#~ msgstr "This hikolp"
-
 #: src/App.js:39
 msgid "This hikolp 12312"
 msgstr "This hikolp 12312"
@@ -87,15 +76,7 @@ msgstr "This message is translated and has a <0>link</0>"
 
 #: src/App.js:10
 msgid "This message will fallback to {fallbackLang} / {count}!"
-msgstr "This message will fallback to {fallbackLang} / {count}!"
-
-#: src/App.js:33
-#~ msgid "This time it should work"
-#~ msgstr "This time it should work"
-
-#: src/App.js:33
-#~ msgid "This time it should work now go"
-#~ msgstr "This time it should work now go"
+msgstr "This message will fallback to %1$s / %1$s!"
 
 #: src/App.js:38
 msgid "This time it should work now go kola"
