--- a/src/locales/pl/messages.po
+++ b/src/locales/pl/messages.po
@@ -1,25 +1,18 @@
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2019-12-10 22:21+0100\n"
-"Mime-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: @lingui/cli\n"
+"X-Generator: lokalise.com\n"
+"Project-Id-Version: Sample Project\n"
+"PO-Revision-Date: 2019-12-30 15:34\n"
+"Last-Translator: lokalise.com\n"
+"Language-Team: lokalise.com\n\n"
 "Language: pl\n"
-"Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Plural-Forms: \n"
 
 #: src/App.js:27
 msgid "13 Nice"
 msgstr ""
-
-#: src/App.js:28
-#~ msgid "Buffer"
-#~ msgstr ""
 
 #: src/App.js:28
 msgid "Buffer zone"
@@ -73,10 +66,6 @@ msgstr ""
 msgid "Okey Google"
 msgstr ""
 
-#: src/App.js:34
-#~ msgid "This hikolp"
-#~ msgstr ""
-
 #: src/App.js:39
 msgid "This hikolp 12312"
 msgstr ""
@@ -89,17 +78,9 @@ msgstr "Ta wiadomość jest przetłumaczona i ma <0>odnośnik</0>"
 msgid "This message will fallback to {fallbackLang} / {count}!"
 msgstr ""
 
-#: src/App.js:33
-#~ msgid "This time it should work"
-#~ msgstr ""
-
-#: src/App.js:33
-#~ msgid "This time it should work now go"
-#~ msgstr ""
-
 #: src/App.js:38
 msgid "This time it should work now go kola"
-msgstr ""
+msgstr "Tym razem powinno działać teraz przejdź do kola"
 
 #: src/App.js:20
 msgid "my.custom.id"
