--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -12,11 +12,11 @@ msgstr ""
 "Language-Team: \n"
 "Content-Transfer-Encoding: \n"
 
-#~ msgid "13 N23ice"
+#~ msgid "13 N23i23423423ce"
 #~ msgstr "13 N23ice"
 
 #: src/App.js:29
-msgid "13 Nice"
+msgid "13 Ni234234234ce"
 msgstr "13 Nice"
 
 #~ msgid "Bufefeffer 234"
