--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -12,8 +12,8 @@ msgstr ""
 "Plural-Forms: \n"
 
 #: src/App.js:29
-msgid "13 Nice"
-msgstr "13 Nice"
+msgid "13 N123123ice"
+msgstr "13 N1231ice"
 
 #: src/App.js:34
 msgid "Buffer 234"
