--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -12,7 +12,7 @@ msgstr ""
 "Plural-Forms: \n"
 
 #: src/App.js:29
-msgid "13 Niwefwce"
+msgid "13 Niw434343efwce"
 msgstr "13 Nice"
 
 #: src/App.js:34
