--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -12,8 +12,8 @@ msgstr ""
 "Plural-Forms: \n"
 
 #: src/App.js:29
-msgid "13 Niw4423423423434343efwce"
-msgstr "13 Nice"
+msgid "13 Niw4423433423423434343efwce"
+msgstr "13 Ni234234ce"
 
 #: src/App.js:34
 msgid "Buffer 234"
