--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -16,8 +16,8 @@ msgstr ""
 #~ msgstr "13 23345345232342234243443234234234234"
 
 #: src/App.js:29
-msgid "13 Nice"
-msgstr "13 Nice"
+msgid "13 Ni234234ce"
+msgstr "13 N234234ice"
 
 #~ msgid "13 Niw434343efwce"
 #~ msgstr "13 Nice"
