--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -122,10 +122,13 @@ msgstr "Loli"
 msgid "Make no push"
 msgstr "Make no push"
 
-#: src/App.js:28
 #: src/App.js:32
 msgid "NEW LOCALE"
 msgstr "NEW LOCALE"
+
+#: src/App.js:28
+msgid "NEW LOCALE3232"
+msgstr "NEW LOCALE3232"
 
 #: src/App.js:23
 msgid "New ride"
